--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ baseline/wandb
 baseline/dataset/__pycache__
 baseline/loss/__pycache__
 baseline/study/__pycache__
+baseline/hrnet/__pycache__
+baseline/hrnet/hrnetv2_w48_imagenet_pretrained.pth
 code
 data
 output/*
